[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "restx-monkey"
dynamic = ["version", ]
authors = [
    { name = "Tom Trval", email = "thandeus@gmail.com" },
]
description = "Monkey patches to keep flask-restx working with latest flask and werkzeug."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.7"
dependencies = [
    'flask-restx>=0.1',
]
keywords = [
    "restx",
    "flask-restx",
    "api",
    "rest",
    "flask",
    "restplus",
    "json",
    "openapi",
    "python",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/Ryu-CZ/restx-monkey"
"Bug Tracker" = "https://github.com/Ryu-CZ/restx-monkey/issues"

[options]
test_suite = "tests"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["restx_monkey", ]

[tool.setuptools.dynamic]
version = {attr = "restx_monkey.__version__"}

[coverage.run]
branch = true
source = [
    "src/restx_monkey",
    "tests",
]

[coverage.paths]
source = "restx_monkey"
