[metadata]
name = restx-monkey
version = attr: restx_monkey.__version__
license = GNU GLv3 License
author = Tom Trval
author_email = trval@kajot.cz
description = Monkey patches to keep flask-restx working with latest flask and werkzeug.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ryu-CZ/restx-monkey
test_suite=tests
packages =
    restx_monkey
project_urls =
    Bug Tracker = https://github.com/Ryu-CZ/restx-monkey/issues
classifiers =
    License :: OSI Approved :: GNU GLv3 License
    Operating System :: OS Independent
    Development Status :: In Development
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Typed dictionaries
    Typing :: Typed

[options]
packages = find:
include_package_data = True
python_requires = >=3.7

[coverage:run]
branch = True
source =
    restx_monkey
    tests

[coverage:paths]
source = restx_monkey

